--- a/python-backend/pyproject.toml
+++ b/python-backend/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.1.0"
 flask-cors = "^5.0.0"
 openai = "^1.59.8"
 diskcache = "^5.6.3"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
